--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
+    "outDir": "dist",
     "lib": [
       "es6"
-    ]
+    ],
+    "declaration": true
   }
 }
