--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-rpc",
+  "name": "typescript-push-rpc",
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
