--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2",
     "ws": "^7.1.2"
+  },
+  "dependencies": {
+    "uuid-js": "^0.7.5"
   }
 }
