--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "@types/ws": "^6.0.3",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2",
     "ws": "^7.1.2"
