--- a/packages/core/core/package.json
+++ b/packages/core/core/package.json
@@ -17,8 +17,7 @@
     "mocha": "^6.2.0",
     "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
-    "typescript": "^3.6.2",
-    "ws": "^7.1.2"
+    "typescript": "^3.6.2"
   },
   "dependencies": {
     "uuid-js": "^0.7.5"
