--- a/packages/core/examples/tsconfig.json
+++ b/packages/core/examples/tsconfig.json
@@ -3,9 +3,9 @@
     "target": "es5",
     "outDir": "dist",
     "lib": [
-      "es6"
+      "es6",
     ],
     "declaration": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["**/*.ts"]
 }
