moving to mono-repo: examples

--- a/examples/package.json
+++ b/examples/package.json
@@ -9,13 +9,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^12.12.17",
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3",
     "ws": "^7.2.0"
   },
   "dependencies": {
-    "@push-rpc/core": "^1.0.12",
+    "@push-rpc/core": "^1.0.14",
     "@push-rpc/websocket": "^1.0.1"
   }
 }
