--- a/core/package.json
+++ b/core/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "uuid-js": "^0.7.5"
   },
-  "repository": "https://github.com/vasyas/typescript-rpc.git",
+  "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
   "publishConfig": {
     "access": "public"
