--- a/examples/package.json
+++ b/examples/package.json
@@ -18,5 +18,7 @@
   "dependencies": {
     "@push-rpc/core": "^1.0.14",
     "@push-rpc/websocket": "^1.0.1"
-  }
+  },
+  "repository": "https://github.com/vasyas/push-rpc.git",
+  "author": "Vasyl Stashuk <vasyl@stashuk.com>"
 }
