--- a/packages/core/tcp/package.json
+++ b/packages/core/tcp/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@push-rpc/core": "1.0.14"
   },
+  "repository": "https://github.com/vasyas/push-rpc.git",
+  "author": "Vasyl Stashuk <vasyl@stashuk.com>",
   "publishConfig": {
     "access": "public"
   }
