--- a/tcp/package.json
+++ b/tcp/package.json
@@ -15,7 +15,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@push-rpc/core": "1.0.14"
+    "@push-rpc/core": "^1.0.15"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
