--- a/packages/core/websocket/tsconfig.json
+++ b/packages/core/websocket/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "outDir": "dist",
     "lib": [
-      "es6"
+      "es6",
+      "dom"
     ],
     "declaration": true
   },
