--- a/packages/core/openapi/package.json
+++ b/packages/core/openapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@push-rpc/openapi",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -15,12 +15,12 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@push-rpc/core": "^1.0.15",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "moment": "^2.22.1",
     "ts-morph": "^1.0.0",
-    "write-yaml": "^1.0.0",
-    "@push-rpc/core": "^1.0.15"
+    "write-yaml": "^1.0.0"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
