--- a/http/package.json
+++ b/http/package.json
@@ -20,7 +20,8 @@
     "why-is-node-running": "^2.1.0"
   },
   "dependencies": {
-    "@push-rpc/core": "^1.0.15"
+    "@push-rpc/core": "^1.0.15",
+    "uuid-js": "^0.7.5"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
