--- a/websocket/package.json
+++ b/websocket/package.json
@@ -15,7 +15,7 @@
     "ws": "^7.2.0"
   },
   "dependencies": {
-    "@push-rpc/core": "1.0.13"
+    "@push-rpc/core": "^1.0.21"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
