--- a/packages/core/http/package.json
+++ b/packages/core/http/package.json
@@ -16,8 +16,7 @@
     "koa-body": "^4.1.1",
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
-    "why-is-node-running": "^2.1.0"
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.32",
