--- a/examples/package.json
+++ b/examples/package.json
@@ -13,7 +13,8 @@
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3",
-    "ws": "^7.2.0"
+    "ws": "^7.2.0",
+    "parcel": "^1.12.4"
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.35",
