--- a/examples/package.json
+++ b/examples/package.json
@@ -4,8 +4,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublishOnly": "tsc",
-    "build": "tsc"
+    "build": "tsc",
+    "browser": "parcel --no-autoinstall browserPing/index.html"
   },
   "license": "MIT",
   "devDependencies": {
@@ -20,6 +20,9 @@
     "@push-rpc/core": "^1.0.35",
     "@push-rpc/websocket": "^1.0.6"
   },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ],
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>"
 }
