--- a/packages/core/examples/package.json
+++ b/packages/core/examples/package.json
@@ -10,14 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^12.12.17",
+    "parcel": "^1.12.4",
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3",
-    "ws": "^7.2.0",
-    "parcel": "^1.12.4"
+    "ws": "^7.2.0"
   },
   "dependencies": {
-    "@push-rpc/core": "^1.0.35",
+    "@push-rpc/core": "../core/",
     "@push-rpc/websocket": "^1.0.6"
   },
   "browserslist": [
