--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -9,15 +9,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.17",
     "parcel": "^1.12.4",
-    "prettier": "^1.19.1",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
     "ws": "^7.2.0"
   },
   "dependencies": {
-    "@push-rpc/core": "../core/",
+    "@push-rpc/core": "1.0.1",
     "@push-rpc/websocket": "^1.0.6"
   },
   "browserslist": [
