--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -13,10 +13,7 @@
     "@types/node": "^12.12.17",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.11.0",
-    "koa-body": "^4.1.1",
-    "prettier": "^1.19.1",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "koa-body": "^4.1.1"
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.32",
