--- a/packages/openapi/package.json
+++ b/packages/openapi/package.json
@@ -10,9 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.17",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "@types/node": "^12.12.17"
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.15",
