--- a/packages/tcp/package.json
+++ b/packages/tcp/package.json
@@ -9,10 +9,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.17",
-    "prettier": "^1.19.1",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "@types/node": "^12.12.17"
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.32"
