--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "mocha": "^6.2.0",
     "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
-    "typescript": "^3.6.2",
+    "typescript": "^3.6.2"
   }
 }
