--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "vasyas <vasyl@stashuk.com>",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^3.22.1",
     "@types/chai": "^4.2.2",
     "@types/mocha": "^5.2.7",
     "@types/ws": "^6.0.3",
     "chai": "^4.2.0",
+    "lerna": "^3.22.1",
     "mocha": "^6.2.0",
     "prettier": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
-  }
+  },
+  "dependencies": {}
 }
