--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -13,7 +13,7 @@
     "ws": "^7.2.0"
   },
   "dependencies": {
-    "@push-rpc/core": "1.0.1",
+    "@push-rpc/core": "^1.0.35",
     "@push-rpc/websocket": "^1.0.6"
   },
   "browserslist": [
