--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@push-rpc/core": "^1.0.35",
-    "@push-rpc/websocket": "^1.0.6"
+    "@push-rpc/websocket": "^1.0.6",
+    "uuid-js": "^0.7.5"
   },
   "browserslist": [
     "last 2 Chrome versions"
