--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@push-rpc/examples",
+  "private": true,
   "version": "1.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
