--- a/packages/websocket/package.json
+++ b/packages/websocket/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@push-rpc/websocket",
-  "version": "1.0.6",
+  "version": "1.1.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,8 +9,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "ws": "^7.2.0",
-    "@push-rpc/core": "^1.0.35"
+    "@push-rpc/core": "^1.1.1",
+    "ws": "^7.2.0"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
