--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublishOnly": "tsc",
+    "prepublishOnly": "yarn build",
     "build": "tsc",
     "test": "mocha -r ts-node/register tests/**/*.ts"
   },
