bugfixed param cloning

--- a/packages/tcp/package.json
+++ b/packages/tcp/package.json
@@ -18,5 +18,6 @@
   "author": "Vasyl Stashuk <vasyl@stashuk.com>",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "cac588b8c118843655324a23250020d7f6f1f090"
 }
