--- a/packages/openapi/tsconfig.json
+++ b/packages/openapi/tsconfig.json
@@ -7,5 +7,6 @@
     ],
     "declaration": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["tests/**/*.ts"]
 }
