--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "publish": "",
-    "api-doc": "typedoc --out api-docs/websocket --tsconfig ./packages/websocket/tsconfig.json --readme none packages/websocket/src/index.ts"
+    "api-doc": "./api-doc.sh core && ./api-doc.sh websocket && ./api-doc.sh http && ./api-doc.sh tcp"
   },
   "name": "push-rpc",
   "version": "1.1.0",
