--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "json-stringify-safe": "^5.0.1",
     "uuid-js": "^0.7.5"
   },
   "repository": "https://github.com/vasyas/push-rpc.git",
