Building to a recent JS version

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -1,12 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "outDir": "dist",
-    "lib": [
-      "es6"
-    ],
-    "declaration": true,
-    "skipLibCheck": true
-  },
+  "extends": "../../tsconfig.json",
   "include": ["**/*.ts"]
 }
