--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,11 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "target": "es5",
-    "outDir": "dist",
-    "lib": [
-      "es6"
-    ],
-    "declaration": true
-  },
-  "include": ["src/**/*.ts"]
+    "outDir": "dist"
+  }
 }
