--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "compilerOptions": {
+    "noEmit": true
+  }
 }
