--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
   "license": "MIT",
   "dependencies": {
     "fast-stringify": "^2.0.0",
-    "nanoid": "^5.0.4"
-  },
-  "optionalDependencies": {
+    "nanoid": "^5.0.4",
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "prettier": "^3.2.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
+    "@types/ws": "^8.5.10",
     "chai": "^5.0.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "prettier": "^3.2.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
