--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "NodeNext",
+    "module": "CommonJS",
     "lib": [
       "es2020"
     ],
@@ -16,11 +16,5 @@
   },
   "include": [
     "src/**/*"
-  ],
-  "ts-node": {
-    "esm": true,
-    "moduleTypes": {
-      "*": "esm"
-    }
-  }
+  ]
 }
