--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,7 +3,8 @@
     "target": "es2020",
     "module": "CommonJS",
     "lib": [
-      "es2020"
+      "es2020",
+      "DOM"
     ],
     "declaration": true,
     "sourceMap": true,
