--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2020",
     "module": "NodeNext",
     "lib": [
-      "es2020"
+      "es2020",
+      "DOM"
     ],
     "declaration": true,
     "sourceMap": true,
