--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
   "printWidth": 100,
   "semi": false,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "bracketSpacing": false,
   "htmlWhitespaceSensitivity": "ignore"
 }
